Latest build upload

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <img class="profile" src="https://www.gravatar.com/avatar/80eb772a0397a0d4c8ee44053a9a5ebd?s=130&d=mm" alt="" />
     <h1 class="name">Fabien Piuzzi</h1>
     <h3 class="tagline">Dev, Electronique, Sysadmin</h3>
-        <h4 class="age">38&nbsp;ans</h4>
+        <h4 class="age">41&nbsp;ans</h4>
 </div>
 
             <div class="contact-container container-block">
@@ -96,6 +96,8 @@
 <p>(Ingénierie et Prototypage)</p>
 
 <ul>
+<li>Réalisation de prototypes hardware pour startups: <a href="https://occam.eco/borne">exemple</a>.</li>
+
 <li>Dévelopement mécatronique d’objets Open Hardware.</li>
 
 <li>Réalisation de serveurs, libraries Ruby pour communiquer avec de l’équipement auto-routier.</li>
@@ -383,6 +385,12 @@
 </span>
             </div>
             <div class="item">
+              <span class="project-title fn url org"><a href="https://github.com/lecodevert/centrifuge" target=_blank>PSF Centrifuge</a></span>
+            <span class="project-tagline">
+<p>Centrifuge Open Hardware</p>
+</span>
+            </div>
+            <div class="item">
               <span class="project-title fn url org"><a href="https://github.com/reefab/Projo" target=_blank>Projo</a></span>
             <span class="project-tagline">
 <p>Matériel et Logiciel pour contrôle d’équipement A/V ou domotique utilisant un port série par interface web/REST.</p>
@@ -392,12 +400,6 @@
               <span class="project-title fn url org"><a href="https://github.com/reefab/CyclingPusher" target=_blank>CyclingPusher</a></span>
             <span class="project-tagline">
 <p>Ordinateur de vélo d’appartement connecté.</p>
-</span>
-            </div>
-            <div class="item">
-              <span class="project-title fn url org"><a href="https://github.com/lecodevert/centrifuge" target=_blank>PSF Centrifuge</a></span>
-            <span class="project-tagline">
-<p>Centrifuge Open Hardware</p>
 </span>
             </div>
     </section>
@@ -427,31 +429,10 @@
                 <h3 class="level-title">InfluxDB</h3>
             </div>
             <div class="item">
-                <h3 class="level-title">Celery</h3>
-            </div>
-            <div class="item">
-                <h3 class="level-title">Twisted</h3>
-            </div>
-            <div class="item">
-                <h3 class="level-title">Celluloid</h3>
-            </div>
-            <div class="item">
-                <h3 class="level-title">EventMachine</h3>
-            </div>
-            <div class="item">
                 <h3 class="level-title">RabbitMQ</h3>
             </div>
             <div class="item">
                 <h3 class="level-title">MQTT</h3>
-            </div>
-            <div class="item">
-                <h3 class="level-title">Puppet</h3>
-            </div>
-            <div class="item">
-                <h3 class="level-title">Vagrant</h3>
-            </div>
-            <div class="item">
-                <h3 class="level-title">KVM/libvirt</h3>
             </div>
             <div class="item">
                 <h3 class="level-title">Docker</h3>
@@ -482,12 +463,6 @@
             </div>
             <div class="item">
                 <h3 class="level-title">git</h3>
-            </div>
-            <div class="item">
-                <h3 class="level-title">Grafana</h3>
-            </div>
-            <div class="item">
-                <h3 class="level-title">Sensu</h3>
             </div>
     </div>
 </section>
