Latest build upload

--- a/index.html
+++ b/index.html
@@ -78,10 +78,33 @@
     <div class="item">
         <div class="meta">
             <div class="upper-row">
+                <h3 class="job-title">Ingénieur R&D</h3>
+                <div class="time">
+                    <span class="dtstart" title="2022-12-06">2022-12</span> -
+                    <span class="dtend" title="...">...</span>
+                </div>
+            </div>
+            <div class="company">
+                  <h2 class="location"><a href="https://scaleway.com" target=_blank>Scaleway</a></h2>
+            </div>
+        </div>
+        <div class="details">
+            <p>
+<p>(Fournisseur Cloud)</p>
+
+<ul>
+<li>Recherche et Développement</li>
+</ul>
+</p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
                 <h3 class="job-title">Fondateur</h3>
                 <div class="time">
                     <span class="dtstart" title="2018-01-06">2018-01</span> -
-                    <span class="dtend" title="...">...</span>
+                    <span class="dtend" title="2022-12-05">2022-12</span>
                 </div>
             </div>
             <div class="company">
